[gd_scene load_steps=24 format=3 uid="uid://djnl2hbwe8of5"]

[ext_resource type="Script" path="res://src/elements/player/player.gd" id="1_3wmpm"]
[ext_resource type="Texture2D" uid="uid://cqv24w87hco5c" path="res://asset/__banks__to_be_removed/mystic_woods_free_2.2/sprites/characters/player.png" id="2_lcj3a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bfh03"]
atlas = ExtResource("2_lcj3a")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0jd5"]
atlas = ExtResource("2_lcj3a")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxar6"]
atlas = ExtResource("2_lcj3a")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ymm"]
atlas = ExtResource("2_lcj3a")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j20h"]
atlas = ExtResource("2_lcj3a")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x01an"]
atlas = ExtResource("2_lcj3a")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s52on"]
atlas = ExtResource("2_lcj3a")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iybmo"]
atlas = ExtResource("2_lcj3a")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jixch"]
atlas = ExtResource("2_lcj3a")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_txi7k"]
atlas = ExtResource("2_lcj3a")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n3c2"]
atlas = ExtResource("2_lcj3a")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mmi6"]
atlas = ExtResource("2_lcj3a")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygujh"]
atlas = ExtResource("2_lcj3a")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6ebf"]
atlas = ExtResource("2_lcj3a")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocdny"]
atlas = ExtResource("2_lcj3a")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc84p"]
atlas = ExtResource("2_lcj3a")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vygb"]
atlas = ExtResource("2_lcj3a")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbwq5"]
atlas = ExtResource("2_lcj3a")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdbyt"]
atlas = ExtResource("2_lcj3a")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_12an5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfh03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0jd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxar6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ymm")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j20h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x01an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s52on")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iybmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jixch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txi7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n3c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mmi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygujh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6ebf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocdny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc84p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vygb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbwq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdbyt")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_72pny"]
size = Vector2(140.25, 170.5)

[node name="Player" type="Area2D"]
script = ExtResource("1_3wmpm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(2.58494e-26, -121)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_12an5")
animation = &"attack"
frame_progress = 0.287669

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -85)
shape = SubResource("RectangleShape2D_72pny")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -33.0
offset_top = 5.0
offset_right = 34.0
offset_bottom = 33.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
